--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -30,7 +30,7 @@
         <section class="dashboard">
             <!-- Card for Adding Existing Car -->
             <div class="card">
-                <h3>Tilføj Eksisterende Bil</h3>
+                <h3>Tilføj Bil</h3>
                 <a th:href="@{/EmployeeLogin/addCard}" class="btn-link">Tilføj Bil</a>
             </div>
 
