--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -29,12 +29,12 @@
 
         <section class="dashboard">
             <div class="card">
-                <h3>Tilføj Bil</h3>
-                <a th:href="@{/EmployeeLogin/addCard}" class="btn-link">Tilføj Bil</a>
+                <h3>Se Alle Biler Og Tilføj Bil</h3>
+                <a th:href="@{/EmployeeLogin/viewAllCarsAndAddCar.html}" class="btn-link">Se Alle Biler Og Tilføj Bil</a>
             </div>
 
             <div class="card">
-                <h3>Køb Ny Bil</h3>
+                <h3>KPI Og Statisiker</h3>
                 <a th:href="@{/EmployeeLogin/buyCars}" class="btn-link">Køb Bil</a>
             </div>
 
@@ -49,12 +49,12 @@
             </div>
 
             <div class="card">
-                <h3>Lever Bil</h3>
+                <h3>Levering Og Registrering Af Ny Bil</h3>
                 <a th:href="@{/EmployeeLogin/deliverCar}" class="btn-link">Lever Bil</a>
             </div>
 
             <div class="card">
-                <h3>Søg medarbejder</h3>
+                <h3>Søg Medarbejder</h3>
                 <a th:href="@{/EmployeeLogin/searchEmployee}" class="btn-link">Søg medarbejder</a>
             </div>
         </section>
