--- a/src/main/resources/templates/EmployeeLogin/viewAllCarsAndAddCar.html
+++ b/src/main/resources/templates/EmployeeLogin/viewAllCarsAndAddCar.html
@@ -1,116 +1,102 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>All Cars & Add Car</title>
-    <link rel="icon" href="/img/fav.png" type="image/x-icon">
-    <link rel="stylesheet" th:href="@{/style.css}" href="/style.css" />
+  <meta charset="UTF-8">
+  <title>Alle Biler & Tilføj Bil</title>
+  <link rel="icon" href="/img/fav.png" type="image/x-icon">
+  <link rel="stylesheet" th:href="@{/style.css}" href="/style.css" />
 </head>
 
 <body class="create-car-page">
 <div class="navbarTop">
-    <ul>
-        <li><a th:href="@{/}">Home</a></li>
-        <li><a th:href="@{/viewAllCarsAndAddCar}">Show all cars</a></li>
-    </ul>
+  <ul>
+    <li><a th:href="@{/}">Hjem</a></li>
+    <li><a th:href="@{/viewAllCarsAndAddCar}">Vis alle biler</a></li>
+  </ul>
 </div>
 
 <div class="content-container">
-    <div class="container">
-        <h1>Add New Car</h1>
+  <div class="container">
+    <h1>Tilføj Ny Bil</h1>
 
-        <form th:action="@{/cars/add}" method="post">
-            <label>Car Emission:</label>
-            <input type="number" name="carEmission" required><br>
+    <form th:action="@{/cars/add}" method="post">
+      <label>Biludledning:</label>
+      <input type="number" name="carEmission" required><br>
 
-            <label>Year:</label>
-            <input type="number" name="year" required><br>
+      <label>År:</label>
+      <input type="number" name="year" required><br>
 
-            <label>Brand:</label>
-            <input type="text" name="brand" required><br>
+      <label>Brand:</label>
+      <input type="text" name="brand" required><br>
 
-            <label>Model:</label>
-            <input type="text" name="model" required><br>
+      <label>Model:</label>
+      <input type="text" name="model" required><br>
 
-            <label>Color:</label>
-            <input type="text" name="color" required><br>
+      <label>Farve:</label>
+      <input type="text" name="color" required><br>
 
-            <label>Equipment Level:</label>
-            <input type="text" name="equipmentLevel" required><br>
+      <label>Udstyrsniveau:</label>
+      <input type="text" name="equipmentLevel" required><br>
 
-            <label>Return Address:</label>
-            <input type="text" name="returnAddress" required><br>
+      <label>Returneringsadresse:</label>
+      <input type="text" name="returnAddress" required><br>
 
-            <label>Vehicle Number:</label>
-            <input type="text" name="vehicleNumber" required><br>
+      <label>Registreringsnummer:</label>
+      <input type="text" name="vehicleNumber" required><br>
 
-            <label>Chassis Number:</label>
-            <input type="text" name="chassisNumber" required><br>
+      <label>Chassisnummer:</label>
+      <input type="text" name="chassisNumber" required><br>
 
-            <label>Price:</label>
-            <input type="number" step="0.01" name="price" required><br>
+      <label>Pris:</label>
+      <input type="number" step="0.01" name="price" required><br>
 
-            <label>Registration Fee:</label>
-            <input type="number" step="0.01" name="registrationFee" required><br>
+      <label>Registreringsafgift:</label>
+      <input type="number" step="0.01" name="registrationFee" required><br>
 
-            <label>Is Car Available:</label>
-            <select name="carAvailable" required>
-                <option value="true">Yes</option>
-                <option value="false">No</option>
-            </select><br>
+      <label>Betalingstid:</label>
+      <input type="number" name="paymentTime" required><br>
 
-            <label>Ready For Loan:</label>
-            <select name="readyForLoan" required>
-                <option value="true">Yes</option>
-                <option value="false">No</option>
-            </select><br>
+      <label>Transporttid:</label>
+      <input type="number" name="transportTime" required><br>
 
-            <label>Payment Time:</label>
-            <input type="number" name="paymentTime" required><br>
+      <div class="button-group">
+        <button type="submit" class="submit">Gem Bil</button>
+      </div>
+    </form>
+  </div>
 
-            <label>Transport Time:</label>
-            <input type="number" name="transportTime" required><br>
+  <hr>
 
-            <div class="button-group">
-                <button type="submit" class="submit">Save Car</button>
-            </div>
-        </form>
-    </div>
-
-    <hr>
-
-    <div class="container">
-        <h2>All Cars</h2>
-        <table>
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>Brand</th>
-                <th>Model</th>
-                <th>Year</th>
-                <th>Color</th>
-                <th>Available</th>
-                <th>Ready</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="car : ${cars}">
-                <td th:text="${car.carId}">1</td>
-                <td th:text="${car.brand}">Brand</td>
-                <td th:text="${car.model}">Model</td>
-                <td th:text="${car.year}">2025</td>
-                <td th:text="${car.color}">Red</td>
-                <td th:text="${car.carAvailable} ? 'Yes' : 'No'">Yes</td>
-                <td th:text="${car.readyForLoan} ? 'Yes' : 'No'">Yes</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+  <div class="container">
+    <h2>Alle Biler</h2>
+    <table>
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>Brand</th>
+        <th>Model</th>
+        <th>År</th>
+        <th>Farve</th>
+        <th>Tilgængelig</th>
+        <th>Klar</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="car : ${cars}">
+        <td th:text="${car.carId}">1</td>
+        <td th:text="${car.brand}">Brand</td>
+        <td th:text="${car.model}">Model</td>
+        <td th:text="${car.year}">2025</td>
+        <td th:text="${car.color}">Rød</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <div class="footer">
-    <p>© 2025 Wishcloud</p>
-    <p>Projekt 3 - Gruppe 4</p>
+  <p>© 2025 Wishcloud</p>
+  <p>Projekt 3 - Gruppe 4</p>
 </div>
 
 </body>
