--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -30,7 +30,7 @@
         <section class="dashboard">
             <div class="card">
                 <h3>Se Alle Biler Og Tilføj Bil</h3>
-                <a th:href="@{/EmployeeLogin/viewAllCarsAndAddCar.html}" class="btn-link">Se Alle Biler Og Tilføj Bil</a>
+                <a th:href="@{/EmployeeLogin/viewAllCarsAndAddCar}" class="btn-link">Se Alle Biler Og Tilføj Bil</a>
             </div>
 
             <div class="card">
