--- a/src/main/resources/templates/EmployeeLogin/viewAllCarsAndAddCar.html
+++ b/src/main/resources/templates/EmployeeLogin/viewAllCarsAndAddCar.html
@@ -13,7 +13,7 @@
 
   <div class="header">
     <div class="logo">
-      <a th:href="@{/}"><img src="/img/Logo.png" alt="Logo"></a>
+      <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
     </div>
     <h3>Medarbejderportal</h3>
     <nav>
