change in dashboard layout

--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -34,8 +34,8 @@
             </div>
 
             <div class="card">
-                <h3>KPI Og Statisiker</h3>
-                <a th:href="@{/EmployeeLogin/buyCars}" class="btn-link">Køb Bil</a>
+                <h3>Levering Og Registrering</h3>
+                <a th:href="@{/EmployeeLogin/deliverCar}" class="btn-link">Lever Og Registrering</a>
             </div>
 
             <div class="card">
@@ -49,8 +49,8 @@
             </div>
 
             <div class="card">
-                <h3>Levering Og Registrering Af Ny Bil</h3>
-                <a th:href="@{/EmployeeLogin/deliverCar}" class="btn-link">Lever Bil</a>
+                <h3>KPI Og Statisiker</h3>
+                <a th:href="@{/EmployeeLogin/buyCars}" class="btn-link">Køb Bil</a>
             </div>
 
             <div class="card">
