--- a/src/main/resources/templates/EmployeeLogin/carOverviewEmployee.html
+++ b/src/main/resources/templates/EmployeeLogin/carOverviewEmployee.html
@@ -33,8 +33,9 @@
                     <p><strong>Farve:</strong> <span th:text="${car.color}"></span></p>
                     <p><strong>Udstyrsniveau:</strong> <span th:text="${car.equipmentLevel}"></span></p>
                     <p><strong>Pris:</strong> <span th:text="${car.price} + ' DKK'"></span></p>
-                    <p><strong>Udlejet:</strong> <span th:text="${car.carAvailable ? 'Nej' : 'Ja'}"></span></p>
-                    <p><strong>Klar til Udlejning:</strong> <span th:text="${car.readyForLoan ? 'Ja' : 'Nej'}"></span></p>
+                    <p><strong>Tilgængelig:</strong> <span th:text="${car.availableForLoan} ? 'Nej' : 'Ja'"></span></p>
+                    <p><strong>Klar Til udlejning:</strong> <span th:text="${car.readyForUse} ? 'Ja' : 'Nej'"></span></p>
+
                 </div>
 
             </section>
