--- a/src/main/resources/templates/EmployeeLogin/damageReportConfirmation.html
+++ b/src/main/resources/templates/EmployeeLogin/damageReportConfirmation.html
@@ -8,33 +8,37 @@
 <body>
 <div class="layout">
 
-  <<div class="header">
-  <div class="logo">
-    <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
+  <div class="header">
+    <div class="logo">
+      <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
+    </div>
+    <h3>Medarbejderportal</h3>
+    <nav>
+      <a th:href="@{/}" class="back-btn">Log ud</a>
+    </nav>
   </div>
-  <h3>Medarbejderportal</h3>
-  <nav>
-    <a th:href="@{/}" class="back-btn">Log ud</a>
-  </nav>
-</div>
 
-  <form th:action="@{/EmployeeLogin/damageReportFill/{id}(id=${car.carId})}" method="POST">
-    <label for="report">Skaderapport:</label>
-    <textarea name="report" id="report" required></textarea>
+  <main class="main-content">
+    <h2 th:text="'Laver skaderapport på bil ID: ' + ${car.carId} + ', Mærke: ' + ${car.brand} + ', Model: ' + ${car.model}">Bil-info</h2>
 
-    <label for="price">Pris:</label>
-    <input type="number" name="price" id="price" required>
+    <form th:action="@{/EmployeeLogin/damageReportFill/{id}(id=${car.carId})}" method="POST">
+      <label for="report">Skaderapport:</label>
+      <textarea name="report" id="report" required></textarea>
 
-    <label for="customerEmail">Kundens E-mail:</label>
-    <input type="email" name="customerEmail" id="customerEmail" required>
+      <label for="price">Pris:</label>
+      <input type="number" name="price" id="price" required>
 
-    <button type="submit">Indsend Rapport</button>
-  </form>
+      <label for="customerEmail">Kundens E-mail:</label>
+      <input type="email" name="customerEmail" id="customerEmail" required>
 
+      <button type="submit">Indsend Rapport</button>
+    </form>
+  </main>
 
   <div class="footer">
     <p>Bilabonnement | Medarbejderportal</p>
   </div>
+
 </div>
 </body>
 </html>
