--- a/src/main/resources/templates/EmployeeLogin/carOverviewEmployee.html
+++ b/src/main/resources/templates/EmployeeLogin/carOverviewEmployee.html
@@ -26,16 +26,15 @@
     <section class="hero">
         <h1>Oversigt over Udlejede Biler</h1>
         <p>Herunder ser du alle biler, som er udlejede lige nu.</p>
+        <div class="filter-buttons">
+            <button onclick="filterCars('all')">Vis alle biler</button>
+            <button onclick="filterCars('available')">Vis tilgængelige</button>
+            <button onclick="filterCars('unavailable')">Vis udlejede</button>
+        </div>
     </section>
 
     <main class="main-content">
         <section class="car-dashboard">
-
-            <div class="filter-buttons">
-                <button onclick="filterCars('all')">Vis alle biler</button>
-                <button onclick="filterCars('available')">Vis udlejede biler</button>
-                <button onclick="filterCars('unavailable')">Vis biler der mangler skaderapport</button>
-            </div>
 
             <div class="car-card"
                  th:each="car : ${rentedCars}"
@@ -44,8 +43,8 @@
                 <p><strong>Farve:</strong> <span th:text="${car.color}"></span></p>
                 <p><strong>Udstyrsniveau:</strong> <span th:text="${car.equipmentLevel}"></span></p>
                 <p><strong>Pris:</strong> <span th:text="${car.price + ' DKK'}"></span></p>
-                <p><strong>Udlejet:</strong> <span th:text="${car.availableForLoan} ? 'Ja' : 'Nej'"></span></p>
-                <p><strong>Mangler skaderapport :</strong> <span th:text="${car.readyForUse} ? 'Ja' : 'Nej'"></span></p>
+                <p><strong>Tilgængelig:</strong> <span th:text="${car.availableForLoan} ? 'Ja' : 'Nej'"></span></p>
+                <p><strong>Klar Til udlejning:</strong> <span th:text="${car.readyForUse} ? 'Ja' : 'Nej'"></span></p>
             </div>
 
         </section>
